...

    @Environment(\.dismiss) private var dismiss

    var body: some View {
        VStack {
            Text("Enter your query")
            TextField("Search", text: $searchText)
                .textFieldStyle(RoundedBorderTextFieldStyle())
                .accessibilityIdentifier("search-query-field")
                .padding()
                .onSubmit {
                    onSearch(searchText)
                }
...
