...
            .listStyle(PlainListStyle())
        } else if [.doc, .image, .gif, .movie, .sound, .bitmap].contains(item.parsedItemType) {  // Preview Document: .pdf, .docx, e.t.c
            // QuickLook + Download
            if let url = fileURL {
                VStack(spacing: 12) {
                    filenameLabel()
                    Button("Preview Document") {
                        print(url)
                        QLURL = url
                    }
                    .accessibilityIdentifier("preview-document-button")
                    .quickLookPreview($QLURL)
                    downloadControl()
...
